--- a/prj.conf
+++ b/prj.conf
@@ -33,7 +33,7 @@ CONFIG_CHIP_BLE_ADVERTISING_DURATION=60
 CONFIG_DK_LIBRARY=y
 
 # Bluetooth Low Energy configuration
-CONFIG_BT_DEVICE_NAME="MatterTemplate"
+CONFIG_BT_DEVICE_NAME="MatterOphelia4"
 
 # Other settings
 CONFIG_THREAD_NAME=y
@@ -45,10 +45,9 @@ CONFIG_NCS_SAMPLE_MATTER_TEST_SHELL=y
 # Disable NFC onboarding
 CONFIG_CHIP_NFC_ONBOARDING_PAYLOAD=n
 
-# Reduce application size
-CONFIG_USE_SEGGER_RTT=y
-CONFIG_RTT_CONSOLE=y
-CONFIG_UART_CONSOLE=n
+# Use UART console (Ophelia-IV MiniEV has no on-board Segger)
+CONFIG_USE_SEGGER_RTT=n
+CONFIG_UART_CONSOLE=y
 
 # Enable Factory Data feature
 CONFIG_CHIP_FACTORY_DATA=n
