--- a/prj.conf
+++ b/prj.conf
@@ -45,9 +45,10 @@ CONFIG_NCS_SAMPLE_MATTER_TEST_SHELL=y
 # Disable NFC onboarding
 CONFIG_CHIP_NFC_ONBOARDING_PAYLOAD=n
 
-# Use UART console (Ophelia-IV MiniEV has no on-board Segger)
-CONFIG_USE_SEGGER_RTT=n
-CONFIG_UART_CONSOLE=y
+# Reduce application size
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_RTT_CONSOLE=y
+CONFIG_UART_CONSOLE=n
 
 # Enable Factory Data feature
 CONFIG_CHIP_FACTORY_DATA=n
