--- a/prj.conf
+++ b/prj.conf
@@ -46,6 +46,7 @@ CONFIG_NCS_SAMPLE_MATTER_TEST_SHELL=y
 CONFIG_CHIP_NFC_ONBOARDING_PAYLOAD=n
 
 # Reduce application size
+# Segger RTT console (via Segger EDU Mini on CON2)
 CONFIG_USE_SEGGER_RTT=y
 CONFIG_RTT_CONSOLE=y
 CONFIG_UART_CONSOLE=n
