--- a/prj.conf
+++ b/prj.conf
@@ -45,6 +45,12 @@ CONFIG_NCS_SAMPLE_MATTER_TEST_SHELL=y
 # Disable NFC onboarding
 CONFIG_CHIP_NFC_ONBOARDING_PAYLOAD=n
 
+# Disable DFU/MCUboot support (no bootloader for now)
+CONFIG_MCUBOOT_IMG_MANAGER=n
+CONFIG_IMG_MANAGER=n
+CONFIG_STREAM_FLASH=n
+CONFIG_FLASH_MAP=n
+
 # Reduce application size
 # Segger RTT console (via Segger EDU Mini on CON2)
 CONFIG_USE_SEGGER_RTT=y
