--- a/prj.conf
+++ b/prj.conf
@@ -48,6 +48,10 @@ CONFIG_CHIP_NFC_ONBOARDING_PAYLOAD=n
 # Disable DFU/MCUboot support (no bootloader for now)
 CONFIG_CHIP_BOOTLOADER_NONE=y
 
+# No bootloader, no OTA, no DFU image manager
+CONFIG_CHIP_OTA_REQUESTOR=n
+CONFIG_IMG_MANAGER=n
+
 # Reduce application size
 # Segger RTT console (via Segger EDU Mini on CON2)
 CONFIG_USE_SEGGER_RTT=y
