--- a/prj.conf
+++ b/prj.conf
@@ -61,3 +61,6 @@ CONFIG_UART_CONSOLE=n
 # Enable Factory Data feature
 CONFIG_CHIP_FACTORY_DATA=n
 CONFIG_CHIP_FACTORY_DATA_BUILD=n
+
+# Dynamic endpoints support (for humidity sensor endpoint)
+CONFIG_CHIP_DEVICE_DYNAMIC_ENDPOINT_COUNT=1
