--- a/prj.conf
+++ b/prj.conf
@@ -62,6 +62,5 @@ CONFIG_UART_CONSOLE=n
 CONFIG_CHIP_FACTORY_DATA=n
 CONFIG_CHIP_FACTORY_DATA_BUILD=n
 
-# Thread SED polling intervals (keep device responsive for Google Home)
-CONFIG_CHIP_SED_IDLE_INTERVAL=500
-CONFIG_CHIP_SED_ACTIVE_INTERVAL=200
+# Reduce Thread polling interval for Google Home compatibility
+CONFIG_OPENTHREAD_POLL_PERIOD=500
